Début de la fonctionnalité pour detecter les téléphones et les ejecter